[tool.poetry]
name = "definition_bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
telebot = "0.0.4"
beautifulsoup4 = "4.11.1"
certifi = "2022.6.15"
charset-normalizer = "2.1.0"
idna = "3.3"
requests = "2.28.1"
soupsieve = "2.3.2.post1"
urllib3 = "1.26.11"
wikipedia = "1.4.0"
pytelegrambotapi = "4.6.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

